--- a/Settings/appsettings.json
+++ b/Settings/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5433;Database=DDDDDD;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=db;Database=DDD;Username=postgres;Password=postgres"
   },
   "Logging": {
     "LogLevel": {
